syntax = "proto3";
package liubaninc.m0.xmodel;

option go_package = "github.com/liubaninc/m0/x/wasm/xmodel";

message GasPrice {
  int64 cpu_rate = 1;
  int64 mem_rate = 2;
  int64 disk_rate = 3;
  int64 xfee_rate = 4;
}

enum ResourceType {
  NET=0;
  CPU = 1;
  MEMORY = 2;
  DISK = 3;
  XFEE = 4;
}

message ResourceLimit {
  ResourceType type = 1;
  int64 limit = 2;
}

message WasmCodeDesc {
  string runtime = 1;
  string compiler = 2;
  bytes digest = 3;
  string vm_compiler = 4;
  string contract_type = 5;
}

message VersionedData {
  PureData pureData = 1;
  bytes refTxid = 2;
  int32 refMsgOffset = 3;
  int32 refOffset = 4;
}

message PureData {
  string bucket = 1;
  bytes key = 2;
  bytes value = 3;
}

// ContractResponse is the response returnd by contract
message ContractResponse {
  int32  status = 1;
  string message = 2;
  bytes  body = 3;
}


message ContractEvent {
  string contract = 1;
  string name = 2;
  bytes body = 3;
}

